logging fixes, disable scrollbar globally

--- a/src/app.css
+++ b/src/app.css
@@ -172,7 +172,7 @@ svg {
 
 	html {
 		padding-bottom: 13rem;
-		scrollbar-width: thin;
+		scrollbar-width: none;
 		-webkit-overflow-scrolling: touch;
 		overscroll-behavior: none;
 	}
